# shell-syntax

./: Cargo.toml  _aligned.ebnf  final.ebnf  final.xml  flake.nix  grammar.ebnf  grammar.js  parsergen.py  parsergen.py.bak  parsergen3.rs  shell.ebnf
lr-gen/: Cargo.toml  bash.xml  parsergen3.py  parsergen3.py.bak  truc.grammar
lr-gen/examples/: lr.rs  parse_grammar.rs  parsing.rs  print_lr.rs
lr-gen/src/: commented.rs  fmt.rs  gmr_to_lr.rs  lib.rs  operators.rs  parsergen.rs  table.rs
lr-gen/src/fmt/: table_display.rs
syntax/: final.ebnf  grammar.old.js  shell.yacc
tree-sitter-shell/: Cargo.toml  binding.gyp  package.json
tree-sitter-shell/bindings/node/: binding.cc  index.js
tree-sitter-shell/bindings/rust/: lib.rs
tree-sitter-shell/src/: grammar.json  node-types.json  parser.c  tree-sitter-ebnf.html
xml-w3c/: Cargo.toml  ebnf.xml  ebnf_diagram.html  expr.xml
xml-w3c/examples/: parse.rs
xml-w3c/src/: lib.rs  parse.rs
xml-w3c/src/parse/: fmt.rs  serde_mod.rs
