[package]
name = "lr-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy-table = { version = "7.1.1", optional = true, default-features = false }
indexmap = "2.2.6"
xml-w3c = { version = "0.1.0", path = "../xml-w3c" }

[features]
table = ["dep:comfy-table"]
table-tty = ["table", "comfy-table/tty"]
